--- a/Web/Site/style/nivo-slider.css
+++ b/Web/Site/style/nivo-slider.css
@@ -7,7 +7,7 @@
  * http://www.opensource.org/licenses/mit-license.php
  */
  
-/* The Nivo Slider styles */
+/* The Nivo Slider style */
 .nivoSlider {
 	position:relative;
 	width:100%;
@@ -58,7 +58,7 @@
 }
 .nivo-box img { display:block; }
 
-/* Caption styles */
+/* Caption style */
 .nivo-caption {
 	position:absolute;
 	left:0px;
@@ -87,7 +87,7 @@
 .nivo-html-caption {
     display:none;
 }
-/* Direction nav styles (e.g. Next & Prev) */
+/* Direction nav style (e.g. Next & Prev) */
 .nivo-directionNav a {
 	position:absolute;
 	top:45%;
@@ -100,7 +100,7 @@
 .nivo-nextNav {
 	right:0px;
 }
-/* Control nav styles (e.g. 1,2,3...) */
+/* Control nav style (e.g. 1,2,3...) */
 .nivo-controlNav {
 	text-align:center;
 	padding: 15px 0;
